--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
   "main": "dist/index.js",
   "scripts": {
     "start": "tsc && node dist/index.js",
+     "build": "tsc",
     "dev": "ts-node-dev src/index.ts"
   },
   "dependencies": {
